<resources>
    <string name="app_name">혈압·혈당 관리</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_info">App 정보</string>
    <string name="action_backup">Data 백업</string>
    <string name="action_input_blood_pressure">혈압 입력</string>
    <string name="action_input_blood_sugar">혈당 입력</string>

    <string name="title_blood_pressure">혈압</string>
    <string name="title_blood_sugar">혈당</string>
    <string name="title_input_blood_pressure">혈압 입력</string>
    <string name="title_input_blood_sugar">혈당 입력</string>
    <string name="title_modify_blood_pressure">혈압 수정</string>
    <string name="title_modify_blood_sugar">혈당 수정</string>

    <string name="label_blood_date">날짜</string>
    <string name="label_blood_time">시간</string>
    <string name="label_blood_pressure_max">최대</string>
    <string name="label_blood_pressure_min">최소</string>
    <string name="label_blood_pulse">맥박</string>

    <string name="label_blood_sugar">혈당</string>
    <string name="label_measure_time">측정시각</string>
    <string name="label_weight">몸무게</string>

    <string name="label_radio">식후</string>
    <string name="label_radio_immediate">직 후</string>
    <string name="label_radio_1_hour">1시간 후</string>
    <string name="label_radio_2_hours">2시간 후</string>
    <string name="label_radio_empty">공복</string>

    <string name="btn_name_ok">확인</string>
    <string name="btn_name_input">입력</string>
    <string name="btn_name_modify">수정</string>
    <string name="btn_name_delete">삭제</string>
    <string name="btn_name_save">저장</string>

    <string name="hint_blood_pressure_max">120</string>
    <string name="hint_blood_pressure_min">80</string>
    <string name="hint_blood_pulse">75</string>

    <string name="hint_blood_sugar">120</string>
    <string name="hint_weight">(선택)</string>

    <string name="unit_blood_pressue">mmHg</string>
    <string name="unit_blood_pulse">회</string>
    <string name="unit_blood_sugar">mg/dL</string>
    <string name="unit_weight">kg</string>

    <string name="empty_data">데이터가 없습니다.</string>

    <!-- toast warning -->
    <string name="toast_warning_fail_save_blood_pressure">데이터를 저장하는데 통신이 원할 하지 않습니다.</string>
    <string name="toast_warning_data_not_valid">입력하지 않은 data가 있습니다.</string>
    <string name="toast_warning_not_valid_weight">몸무게는 20~120kg까지 입력할 수 있습니다.</string>

    <!-- progress dialog -->
    <string name="progress_saving">저장 중입니다.</string>

    <!-- alert dialog -->
    <string name="dialog_test_data">테스트 데이터를 생성하거나 삭제 합니다.</string>

    <string name="info_01">
        고객님께서 입력하시는 혈압, 혈당 정보는 cloud에 익명의 정보로 저장하고 있습니다.
        그래서 앱을 지우시면 고객님의 고유한 정보를 알 수 없기 때문에 다시 가져올 수가
        없습니다. 그러므로
    </string>
    <string name="info_02">
        상단의 회색상자 안에 있는 고객님의 고유 ID를 별도로 적어두시거나 저장해 두시기 바랍니다.
    </string>
    <string name="info_03">
        \n그러면 앱을 삭제 하더라도 위의 ID를 메일로 보내주시면 저장하신 정보를 따로 보내 드리도록 하겠습니다.
        \n\n직접 데이터를 고객님의 메일로 백업하시려면 이 화면을 종료한 후 메뉴에 "Data 백업"을
        선택하시기 바랍니다.
        \n감사합니다.
    </string>

    <string name="pref_setting_default_category_title">기본설정</string>
    <string name="pref_key_setting_default_category">key_default_category</string>
    <string name="pref_title_is_pregnant">임신중</string>
    <string name="pref_summary_is_pregnant">여성분이신 경우 임신 중이실 때 체크해 주세요</string>
    <string name="pref_key_is_pregnant">key_is_pregnant</string>

</resources>
