<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/row_title_vertical_padding"
    android:layout_marginBottom="@dimen/row_item_vertical_padding"
    android:orientation="horizontal"
    android:clickable="true"
    android:focusable="true"
    android:background="?android:selectableItemBackground">

    <TextView
        style="@style/RowTitleDate"
        android:text="@string/label_blood_date"/>

    <TextView
        style="@style/RowTitleTime"
        android:text="@string/label_blood_time"/>

    <TextView
        style="@style/RowTitleData"
        android:layout_height="wrap_content"
        android:text="@string/label_blood_sugar"/>

    <TextView
        style="@style/RowTitleMeasureTime"
        android:text="@string/label_measure_time"/>

    <TextView
        style="@style/RowTitleData"
        android:text="@string/label_weight"/>

</LinearLayout>